[gd_scene load_steps=10 format=3 uid="uid://ddcdgw7n1epnq"]

[ext_resource type="PackedScene" uid="uid://dnjtmatmwg7w8" path="res://objects/characters/humanoids/reavers/base_reaver.tscn" id="1_frv2x"]
[ext_resource type="Script" uid="uid://d3d2h5grpnv68" path="res://objects/characters/humanoids/player/player_reaver.gd" id="2_68cfe"]
[ext_resource type="Script" uid="uid://cxaiy87d7eobl" path="res://objects/characters/player/camera_controller.gd" id="3_732ke"]
[ext_resource type="Shader" uid="uid://clv2rr31lf0bl" path="res://scripts/shaders/sable.gdshader" id="4_1gjgo"]
[ext_resource type="PackedScene" uid="uid://6yxpc10ixbcv" path="res://objects/util/camera/smooth_follower.tscn" id="5_a3ige"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_732ke"]
radius = 1.3
height = 5.0

[sub_resource type="SphereShape3D" id="SphereShape3D_73w74"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_coe8v"]
render_priority = 0
shader = ExtResource("4_1gjgo")
shader_parameter/threshold1 = 0.7
shader_parameter/night_time = 0.0
shader_parameter/shadow_value_threshold = 0.3
shader_parameter/dark_value_threshold = 0.17
shader_parameter/dark_brightness_scale = 60.0
shader_parameter/normal_threshold = 1.0
shader_parameter/depth_threshold = 10.0
shader_parameter/depth_artifact_correction_coef = 2.0
shader_parameter/outline_color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_13xew"]
flip_faces = true
size = Vector2(2, 2)

[node name="PlayerReaver" instance=ExtResource("1_frv2x")]
script = ExtResource("2_68cfe")
bodysuit_material = 15
head_type = 3

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("CapsuleShape3D_732ke")

[node name="GeneralSkeleton" parent="Mesh/MasterPose" index="0"]
bones/2/position = Vector3(0.0109296, 1.03732, 0.0045499)
bones/2/rotation = Quaternion(0.107229, -0.0449104, -0.0709414, 0.990683)
bones/3/rotation = Quaternion(0.0315195, -0.00405334, 0.0253953, 0.999172)
bones/6/rotation = Quaternion(0.0805725, 0.0124044, 0.0196039, 0.996479)
bones/7/rotation = Quaternion(0.0651268, 0.0172093, 0.0256214, 0.9974)
bones/8/rotation = Quaternion(0.000905748, 0.0129039, -0.0211422, 0.999693)
bones/10/rotation = Quaternion(-0.0352228, 0.019944, 0.00184935, 0.999179)
bones/11/rotation = Quaternion(0.398447, 0.566914, 0.409013, -0.593765)
bones/12/rotation = Quaternion(0.16521, 0.639108, 0.0864105, 0.746177)
bones/13/rotation = Quaternion(0.102879, -0.859235, 0.273595, 0.419853)
bones/16/rotation = Quaternion(-0.238956, 0.601463, -0.171389, 0.742811)
bones/18/rotation = Quaternion(0.143592, 0.0773329, -0.00431043, 0.986602)
bones/19/rotation = Quaternion(0.346511, 0.222569, -0.02244, 0.910983)
bones/20/rotation = Quaternion(0.337441, 0.178688, 0.00917074, 0.924186)
bones/22/rotation = Quaternion(0.208849, 0.1068, -0.00897685, 0.972057)
bones/23/rotation = Quaternion(0.388502, 0.200874, -0.0128507, 0.899194)
bones/24/rotation = Quaternion(0.337267, 0.161219, -0.00136882, 0.927501)
bones/25/rotation = Quaternion(-0.21444, 0.713588, 0.322539, 0.583761)
bones/26/rotation = Quaternion(-0.0121393, -0.00661829, 0.014161, 0.999804)
bones/26/scale = Vector3(1.00005, 0.999982, 0.999968)
bones/27/rotation = Quaternion(0.141556, 0.311338, 0.00218868, 0.939695)
bones/27/scale = Vector3(1.00002, 1, 0.999981)
bones/29/rotation = Quaternion(0.238613, 0.137539, 0.03047, 0.960843)
bones/30/rotation = Quaternion(0.436482, 0.022567, 0.0142972, 0.899316)
bones/31/rotation = Quaternion(0.379372, 0.00561024, 0.0262809, 0.924854)
bones/33/rotation = Quaternion(0.307498, 0.146095, -0.0133105, 0.940172)
bones/34/rotation = Quaternion(0.336668, 0.120749, 0.0137889, 0.933747)
bones/35/rotation = Quaternion(0.376546, 0.115102, 0.0328738, 0.918632)
bones/38/rotation = Quaternion(0.398506, -0.566906, -0.408417, -0.594143)
bones/39/rotation = Quaternion(-0.144705, 0.480748, 0.249598, -0.828035)
bones/40/rotation = Quaternion(0.0832298, 0.854451, -0.246517, 0.449684)
bones/43/rotation = Quaternion(-0.29519, -0.520288, 0.28894, 0.747447)
bones/45/rotation = Quaternion(0.225383, -0.145114, -0.0403556, 0.962557)
bones/46/rotation = Quaternion(0.459555, -0.036654, -0.0281198, 0.886947)
bones/47/rotation = Quaternion(0.376964, -0.018417, -0.0370401, 0.925304)
bones/49/rotation = Quaternion(0.303223, -0.155631, 0.00424781, 0.940115)
bones/50/rotation = Quaternion(0.331608, -0.133698, -0.0261949, 0.933528)
bones/51/rotation = Quaternion(0.371465, -0.126687, -0.0456181, 0.918631)
bones/53/rotation = Quaternion(0.205711, -0.113407, 0.00239089, 0.972017)
bones/54/rotation = Quaternion(0.381523, -0.214135, 7.81417e-05, 0.899214)
bones/55/rotation = Quaternion(0.331316, -0.172834, -0.00967619, 0.927504)
bones/57/rotation = Quaternion(0.141582, -0.0812894, 0.000401467, 0.986583)
bones/58/rotation = Quaternion(0.339675, -0.235466, 0.0100631, 0.910536)
bones/59/rotation = Quaternion(0.330751, -0.189886, -0.0204885, 0.92419)
bones/60/rotation = Quaternion(-0.217734, -0.716145, -0.333671, 0.573055)
bones/61/rotation = Quaternion(0.00204527, 0.0118616, 0.0131105, 0.999842)
bones/61/scale = Vector3(1.00004, 0.999992, 0.999972)
bones/62/rotation = Quaternion(0.134858, -0.314195, 0.00764346, 0.9397)
bones/62/scale = Vector3(1.00002, 1, 0.999982)
bones/65/rotation = Quaternion(-0.021329, 0.640833, 0.755023, -0.137181)
bones/66/rotation = Quaternion(-0.00280123, 0.487388, -0.869689, -0.0780224)
bones/67/rotation = Quaternion(-0.0384666, 0.780983, -0.622623, 0.0304472)
bones/68/rotation = Quaternion(-0.000188826, 0.999573, 0.0156475, -0.024677)
bones/70/rotation = Quaternion(0.0589214, -0.0162459, 0.722856, 0.688291)
bones/71/rotation = Quaternion(0.738247, 0.673908, -0.0270858, -0.0103147)
bones/73/rotation = Quaternion(0.0318401, 0.426674, 0.90378, -0.0108158)
bones/74/rotation = Quaternion(-0.000410167, 0.901726, -0.430674, 0.0375389)
bones/75/rotation = Quaternion(0.0572314, 0.818455, -0.571037, -0.0278207)
bones/76/rotation = Quaternion(7.8434e-05, 1, 2.34544e-05, 3.30866e-05)
bones/78/rotation = Quaternion(-0.688288, 0.722857, 0.016223, 0.0589432)
bones/79/rotation = Quaternion(0.0103153, -0.0270858, -0.673909, 0.738246)
bones/82/position = Vector3(0.0401485, 0.288041, 0.111245)
bones/82/rotation = Quaternion(0.221168, -0.15656, 0.66335, 0.697524)
bones/83/position = Vector3(-0.0423208, 0.650656, 0.0284679)
bones/83/rotation = Quaternion(0.631275, -0.569323, -0.353587, -0.390306)
bones/83/scale = Vector3(1, 1, 1)
bones/85/position = Vector3(-0.128075, 1.82931, 0.338574)
bones/85/rotation = Quaternion(-0.334549, 0.463369, -0.499559, 0.651005)
bones/86/position = Vector3(0.130114, -0.0302575, 0.372556)
bones/86/rotation = Quaternion(0.0624565, 0.384684, 0.911644, -0.130475)

[node name="LeftHandKatana" parent="Mesh/MasterPose/GeneralSkeleton" index="0"]
transform = Transform3D(-0.362657, 0.929722, 0.0640074, -0.713729, -0.232928, -0.660557, -0.599226, -0.28524, 0.748042, 0.429369, 1.33414, 0.550284)

[node name="RightHandKatana" parent="Mesh/MasterPose/GeneralSkeleton" index="1"]
transform = Transform3D(-0.361315, -0.905588, -0.222174, 0.820897, -0.195922, -0.536415, 0.442243, -0.376197, 0.814185, -0.412879, 1.37999, 0.492026)

[node name="SkyrigAttachment" parent="Mesh/MasterPose/GeneralSkeleton" index="2"]
transform = Transform3D(0.985901, 0.13093, -0.104198, -0.150192, 0.966939, -0.206088, 0.07377, 0.218832, 0.97297, 0.0109296, 1.03732, 0.0045499)

[node name="Head1" parent="Mesh/Female" index="3"]
visible = false

[node name="Head3" parent="Mesh/Female" index="5"]
visible = true

[node name="AnimationTree" parent="." index="3"]
parameters/katana_tree/in_air/in_air_state/current_state = 0.0
parameters/katana_tree/in_air/in_air_state/current_index = 0.0
parameters/katana_tree/in_air_blend/blend_amount = true
parameters/katana_tree/jump_end/active = true
parameters/katana_tree/jump_end/internal_active = true
parameters/katana_tree/jump_start/active = 0.0
parameters/katana_tree/sprint_end/active = 0.0
parameters/katana_tree/sprint_end/internal_active = -0.028352
parameters/katana_tree/timescale2/scale = 1.03
parameters/state_transition/current_state = -0.028352
parameters/state_transition/current_index = 0.024839

[node name="CameraRoot" type="Node3D" parent="." index="4"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 5, 0)
script = ExtResource("3_732ke")

[node name="CameraYaw" type="Node3D" parent="CameraRoot" index="0"]

[node name="CameraPitch" type="Node3D" parent="CameraRoot/CameraYaw" index="0"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRoot/CameraYaw/CameraPitch" index="0"]
shape = SubResource("SphereShape3D_73w74")
spring_length = 9.0

[node name="Camera3D" type="Camera3D" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm3D" index="0"]
transform = Transform3D(0.322581, 0, -3.55271e-15, 0, 0.322581, 0, 1.77636e-15, 0, 0.322581, 0, 0, 0)

[node name="ShaderQuad" type="MeshInstance3D" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm3D/Camera3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.89194, -0.452155, 0, 0.452155, 0.89194, 0.0454259, -0.92755, -6.07672)
material_override = SubResource("ShaderMaterial_coe8v")
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_13xew")
skeleton = NodePath("../../../..")
metadata/_edit_lock_ = true

[node name="SmoothFollower" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm3D/Camera3D" index="1" instance=ExtResource("5_a3ige")]
top_level = true
cast_shadow = 0
smoothing = 3.0

[node name="LookAtTarget_CamView" type="Node3D" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm3D/Camera3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)

[connection signal="update_movement_state" from="." to="CameraRoot" method="_update_movement_state"]
[connection signal="set_cam_rotation" from="CameraRoot" to="." method="_update_cam_rotation"]

[editable path="Mesh/MasterPose"]
[editable path="Mesh/MasterPose/GeneralSkeleton/SkyrigAttachment/SkyrigLeft"]
[editable path="Mesh/MasterPose/GeneralSkeleton/SkyrigAttachment/SkyrigRight"]
[editable path="Mesh/Female/XHead4"]
[editable path="Mesh/Female/XHead5"]
[editable path="Mesh/Female/XHead6"]
[editable path="CameraRoot/CameraYaw/CameraPitch/SpringArm3D/Camera3D/SmoothFollower"]
